hphp/hack/test/typecheck/this_tparam_bad2.php.like_types.exp
File "this_tparam_bad2.php", line 26, characters 12-15:
Invalid argument (Typing[4110])
File "this_tparam_bad2.php", line 14, characters 36-39:
Expected ~<expr#1> because it is an unenforceable type
File "this_tparam_bad2.php", line 18, characters 33-35:
But got Foo
